# evian

./: Cargo.toml  README.md  project.pros  rust-toolchain
.cargo/: config.toml
examples/: basic.rs  testing.rs  trajectory.rs
src/: command.rs  controller.rs  devices.rs  drivetrain.rs  lib.rs  main.rs  prelude.rs  sensors.rs  timer.rs  tracking.rs
src/command/: basic.rs  mod.rs  mtp.rs  settler.rs
src/commands/: basic.rs  joystick.rs  mod.rs  mtp.rs
src/control/: mod.rs  pid.rs  profile.rs  settler.rs  tolerances.rs  trajectory.rs
src/controller/: mod.rs  pid.rs
src/differential/: drivetrain.rs  mod.rs  trajectory.rs
src/differential/commands/: basic.rs  mod.rs  mtp.rs  point.rs
src/differential/motion/: basic.rs  mod.rs  mtp.rs  ramsete.rs  seeking.rs
src/drivetrain/: differential.rs  mod.rs
src/math/: angle.rs  mod.rs  pursuit.rs  vec2.rs
src/math/curve/: bezier.rs  mod.rs
src/motion/: basic.rs  mod.rs  ramsete.rs  seeking.rs
src/mp/: bezier.rs  mod.rs  trajectory.rs
src/settle/: mod.rs
src/tracking/: mod.rs  parallel_wheel.rs  perpendicular_wheel.rs  sensor.rs  wheel.rs  wheeled.rs
src/tracking/wheeled/: mod.rs  parallel.rs  perpendicular.rs  wheel.rs
src/trajectory/: mod.rs
