[package]
name = "evian"
description = "Experimental command-based controls library for vexide."
repository = "https://github.com/vexide/evian/"
authors = ["Tropical"]
license-file = "LICENSE.md"
categories = ["science::robotics", "no-std", "mathematics", "embedded"]
keywords = ["vex", "vexide", "vex-robotics", "robotics", "autonomous"]
version = "0.3.0-beta.2"
edition = "2021"

[lints.clippy]
missing_const_for_fn = "warn"
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
doc_markdown = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
missing_panics_doc = "allow"
cast_possible_wrap = "allow"
match_bool = "allow"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.v5]
upload-strategy = "differential"
slot = 1

[profile.release]
strip = true
opt-level = "z"
lto = true

[dependencies]
vexide = { git = "https://github.com/vexide/vexide.git" }

[package.metadata.docs.rs]
targets = ["armv7a-none-eabi"]
